# baymax

./: .gitignore  CLAUDE.md  DEMO_PLAN.md  DEPLOYMENT_PLAN.md
backend/: .env.example  pyproject.toml  requirements.txt  test_chat.py  test_phases_1_6.py  test_phases_1_8.py
backend/app/: config.py  main.py
backend/app/agents/: companion.py  graph.py
backend/app/api/: router.py
backend/app/api/routers/: chat.py
backend/app/core/: config.py
backend/app/mcp_servers/: caregiver_comms.py  clinician_summary.py  governance.py  medication.py  patient_context.py
backend/app/models/: agent.py  api.py  audit.py  auth.py  base.py  chat.py  clinician.py  conversation.py  enums.py  escalation.py  medication.py  profiles.py
backend/app/policies/: emergency_keywords.yaml  escalation_rules.yaml  safety_rules.yaml
backend/app/rag/: ingest.py  retrieve.py
backend/app/repositories/: audit_repository.py  conversation_repository.py  medication_repository.py  patient_repository.py  rag_repository.py
backend/app/services/: chat_service.py  safety_service.py
backend/app/voice/: stt.py  tts.py
backend/baymax_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/config/: app.yaml  cors.yaml  features.yaml
backend/data/: seed.sql
backend/data/guidelines/: diabetes_guidelines.txt  dietary_guidelines.txt  hawker_food_guide.txt  hypertension_guidelines.txt
backend/scripts/: create_test_users.py  reset_demo.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
qa/: .gitignore  README.md  package-lock.json  package.json  (+1 more)
(+37 files in other folders)
